# mgiskDiskClean

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  HANDOFF.md  MrijaArchive-Install-Win11-Dev.cmd  MrijaArchive-Install.cmd  README.md  README.txt  devenv.nix  devenv.yaml  docker-compose.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: build-windows-exe.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-pytest.txt  (+15 more)
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
data/: mailboxes.txt  mailboxes.txt.example
deploy/: docker-compose.yml
docker/: README-windows.md  qa-archive-docker.sh
nginx/: mime.types  nginx.conf
scripts/: disk_scan.py  droplet-cloud-init.yaml  maildir_attachments_py2.py  maildir_scan.py  maildir_viewer.py  push-sqlite.sh  push-update.sh
tests/: conftest.py  test_admin_audit.py  test_apply_decisions.py  test_body_cc_extraction.py  test_build_client_sqlite.py  test_control_api.py  test_data_routes.py  test_db.py  test_decisions_template.py  test_dedup_group.py  test_docker_config.py  test_e2e_cli.py  test_imap_ingest.py  test_index_schema_migration_v2.py  test_inventory_reconcile.py  test_launcher.py  test_manifest.py  test_pdf_determinism.py  test_pdf_duplicates.py  test_pdf_german_headers.py  test_pre_store_dedup.py  test_review_decision_api.py  test_rfc822.py  test_scaffold.py  test_sha256.py  test_stable_ids.py  test_strict_parse.py  test_task2b_attachments_index.py  test_ui_theme.py  test_update_security.py  test_updater.py  test_walk_deterministic.py  test_web_download.py  test_web_server.py
(+189 files in other folders)
