[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "maildir-pdf-report"
version = "0.1.0"
description = "Generate PDF reports from maildir"
requires-python = ">=3.11"
dependencies = [
    "reportlab>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
imap = [
    "imap-tools>=1.6",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
