[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mrija-archive"
version = "0.1.0"
description = "Maildir archive indexing pipeline and local SQLite viewer"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "httpx>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "reportlab>=4.0",
    "rich>=13.7",
    "textual>=0.61",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
    "imap-tools>=1.6",
    "pytest>=8.0",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:Warning",
]
